--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # core
+  equatable: ^2.0.3
+
+  # theme
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
