--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,9 @@ dependencies:
     sdk: flutter
 
   # core
+  flutter_bloc: ^7.1.0
   equatable: ^2.0.3
+  get_it: ^7.1.3
 
   # theme
   cupertino_icons: ^1.0.2
@@ -26,7 +28,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
