--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   either_dart: ^0.1.2
   get_it: ^7.1.3
   http: ^0.13.3
+  sqflite: ^2.0.0+3
 
   # theme
   cupertino_icons: ^1.0.2
