--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   get_it: ^7.1.3
   http: ^0.13.3
   sqflite: ^2.0.0+3
+  shared_preferences: ^2.0.6
 
   # theme
   cupertino_icons: ^1.0.2
