--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,10 +26,16 @@ dependencies:
   # theme
   cupertino_icons: ^1.0.2
   salomon_bottom_bar: ^3.1.0
+  flutter_launcher_icons: ^0.9.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/app_icon.png"
 
 # The following section is specific to Flutter.
 flutter:
