--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   http: ^0.13.3
   sqflite: ^2.0.0+3
   shared_preferences: ^2.0.6
+  rxdart: ^0.27.1
+  flutter_local_notifications: ^5.0.0
+  android_alarm_manager: ^2.0.2
 
   # theme
   cupertino_icons: ^1.0.2
