--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   rxdart: ^0.27.1
   flutter_local_notifications: ^5.0.0
   android_alarm_manager: ^2.0.2
+  intl: ^0.17.0
 
   # theme
   cupertino_icons: ^1.0.2
