--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   shared_preferences: ^2.0.6
   rxdart: ^0.27.1
   flutter_local_notifications: ^5.0.0
-  android_alarm_manager: ^2.0.2
+  android_alarm_manager_plus: ^1.0.2
   intl: ^0.17.0
 
   # theme
