--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,22 +24,16 @@ dependencies:
   shared_preferences: ^2.0.6
   rxdart: ^0.27.1
   flutter_local_notifications: ^5.0.0
-  android_alarm_manager_plus: ^1.0.2
+  android_alarm_manager: ^2.0.2
   intl: ^0.17.0
 
   # theme
   cupertino_icons: ^1.0.2
   salomon_bottom_bar: ^3.1.0
-  flutter_launcher_icons: ^0.9.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-flutter_icons:
-  android: "launcher_icon"
-  ios: true
-  image_path: "assets/app_icon.png"
 
 # The following section is specific to Flutter.
 flutter:
